header menu and logo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 </head>
 
 <body>
-    <div>Header</div>
+
+    <!-- header // start -->
+    <div>
+        logo
+        <img src="logofile.jpg" alt="">
+
+        menu
+        <menu></menu>
+    </div>
+    <!-- header // end -->
+    
+
     <div>Content</div>
+
+
     <div>Footer</div>
 </body>
 </html>
