--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- header // start -->
-    <header>
+    <header class="row">
          <div> <!-- col 1 -->
             <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="Ironhack Logo">
         </div>
@@ -37,34 +37,43 @@
     <!-- header // end -->
     
     <!-- hero // start -->
-    <section class="bgColorSection1">
+    <section class="bgColorSection1 hero">
         <h1>Heading for Content 1</h1>
         <h3>just another text for h3</h3>
     </section>
     <!-- hero // end -->
 
     <!-- features // start -->
-    <section class="bgColorSection2">
-        <div>
+    <section class="row bgColorSection2" id="featuresSection">
+        <div class="centerSectionCol">
             <i class="fas fa-bug fa-5x"></i>
-            <h3>Bug Free </h3>
+            <h3>Bug Free Bug Free Bug Free Bug Free Bug Free </h3>
         </div>
-        <div>
+        <div class="centerSectionCol">
             <i class="fas fa-feather fa-5x"></i>
-            <h3>Feature 2</h3>
+            <h3>Feature 2 Feature 2 Feature 2 Feature 2 Feature 2</h3>
         </div>
-        <div>
+        <div class="centerSectionCol">
             <i class="fas fa-angry fa-5x"></i>
-            <h3>Feature 3</h3>
+            <h3>Feature 3 Feature 3 Feature 3 Feature 3 Feature 3</h3>
         </div>
     </section>
     <!-- features // end  -->
 
     <!-- testimonials // start  -->
-    <section class="bgColorSection3">
-        <div>Testimonial 1</div>
-        <div>Testimonial 2</div>
-        <div>Testimonial 3</div>
+    <section class="row bgColorSection3">
+        <div id="testimonialSection">
+            <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg">
+            <h4>Beautiful Testimonial 1</h4>
+        </div>
+        <div id="testimonialSection">
+            <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg">
+            <h4>Beautiful Testimonial 2</h4>
+        </div>
+        <div id="testimonialSection">
+            <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg">
+            <h4>Beautiful Testimonial 3</h4>
+        </div>
     </section>
     <!-- testimonials // end  -->
 
@@ -75,10 +84,16 @@
     <!-- get a quote // end  -->
 
 
+    <footer class="row">
+        <div>
+            <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="Ironhack Logo" width="30px">
+        </div>
+        <div>
+            About
+            Services
+            FAQ
 
-    <footer>
-        <div>logo on the footer</div>
-        <div>links</div>
+        </div>
         <div>social networks</div>
     </footer>
     
