--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
     <!-- features // start -->
     <section class="row bgColorSection2" id="featuresSection">
-        <div class="centerSectionCol">
+        <div class="centerSectionCol col-4">
             <i class="fas fa-bug fa-5x"></i>
             <h3>Bug Free Bug Free Bug Free Bug Free Bug Free </h3>
         </div>
-        <div class="centerSectionCol">
+        <div class="centerSectionCol col-4">
             <i class="fas fa-feather fa-5x"></i>
             <h3>Feature 2 Feature 2 Feature 2 Feature 2 Feature 2</h3>
         </div>
-        <div class="centerSectionCol">
+        <div class="centerSectionCol col-4">
             <i class="fas fa-angry fa-5x"></i>
             <h3>Feature 3 Feature 3 Feature 3 Feature 3 Feature 3</h3>
         </div>
@@ -92,10 +92,10 @@
 
 
     <footer class="row">
-        <div>
+        <div class="col-2">
             <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="Ironhack Logo" width="30px">
         </div>
-        <div>
+        <div class="col-5">
             <h4>Links</h4>
             <ul>
                 <li class="footer-menu"><a href="about.html">About</a></li>
@@ -103,7 +103,7 @@
                 <li class="footer-menu"><a href="faq.html">FAQ</a></li>
             </ul>
         </div>
-        <div>
+        <div class="col-5">
             <h4>Follow Us</h4>
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
